--- a/sample1/Pages/Index.cshtml
+++ b/sample1/Pages/Index.cshtml
@@ -6,6 +6,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p fontsize=80%;>QUADRANT RESOURCE PVT.LTD</p>
+    <h1 class="display-5">QUADRANT RESOURCE PVT.LTD</h1>
     
 </div>
