--- a/sample1/Pages/Index.cshtml
+++ b/sample1/Pages/Index.cshtml
@@ -6,6 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Quadrant Resource Pvt.ltd</h1>
     
     
 </div>
